Closed
Bug 394700
Opened 18 years ago
Closed 18 years ago
"ASSERTION: Item was successful, but node from collection was null!" involving DOMNodeRemoved event
Categories
(Core :: DOM: Core & HTML, defect)
Core
DOM: Core & HTML
Tracking
()
RESOLVED
FIXED
People
(Reporter: jruderman, Assigned: smaug)
References
Details
(Keywords: assertion, testcase)
Attachments
(2 files)
|
593 bytes,
application/xhtml+xml
|
Details | |
|
893 bytes,
patch
|
sicking
:
review+
sicking
:
superreview+
sicking
:
approval1.9+
|
Details | Diff | Splinter Review |
Loading the testcase triggers:
###!!! ASSERTION: Item was successful, but node from collection was null!: 'node', file /Users/jruderman/trunk/mozilla/layout/forms/nsListControlFrame.cpp, line 1218
###!!! ASSERTION: could not get option element by index!: 'optionElement != nsnull', file /Users/jruderman/trunk/mozilla/layout/forms/nsListControlFrame.cpp, line 1177
| Assignee | ||
Updated•18 years ago
|
Assignee: nobody → Olli.Pettay
| Assignee | ||
Comment 1•18 years ago
|
||
RebuildOptionsArray() is called only when something "unusual" has happened, like
mutation event listener has modified options list.
Feel free to approval1.9+ too.
Attachment #279424 -
Flags: superreview?(jonas)
Attachment #279424 -
Flags: review?(jonas)
Comment on attachment 279424 [details] [diff] [review]
when rebuilding options array, update the selectedIndex too
Though it would be great to get a mochitest too.
Attachment #279424 -
Flags: superreview?(jonas)
Attachment #279424 -
Flags: superreview+
Attachment #279424 -
Flags: review?(jonas)
Attachment #279424 -
Flags: review+
Attachment #279424 -
Flags: approval1.9+
| Assignee | ||
Comment 3•18 years ago
|
||
I'll check in a mochitest too.
| Assignee | ||
Updated•18 years ago
|
Status: NEW → RESOLVED
Closed: 18 years ago
Flags: in-testsuite+
Resolution: --- → FIXED
Updated•18 years ago
|
OS: Mac OS X → All
Hardware: PC → All
Updated•6 years ago
|
Component: DOM → DOM: Core & HTML
You need to log in
before you can comment on or make changes to this bug.
Description
•