Bug 394700, update selectedIndex when mutation event listener modifies option list, r+sr+a=sicking